# GameNative

./: README.md  THIRD_PARTY_NOTICES  manifest.json
.github/workflows/: adhoc-signed-build.yml  app-release-signed.yml  tagged-release.yml
PrivacyPolicy/: README.md
app/: build.gradle.kts  proguard-rules.pro
app/schemas/app.gamenative.db.PluviaDatabase/: 22.json  23.json  24.json
app/src/androidTest/java/app/gamenative/mods/: ModArchiveExtractorAndroidTest.kt
app/src/legacy/: AndroidManifest.xml
app/src/legacy/assets/graphics_driver/: wrapper-gamenative.tzst
app/src/main/: AndroidManifest.xml
app/src/main/assets/: graphics_driver_download.json  pulseaudio-gamenative-20260527.tzst  pulseaudio-gamenative-20260528.tzst  pulseaudio-gamenative-20260607.tzst  pulseaudio-gamenative-20260612.tzst
app/src/main/assets/wincomponents/: wincomponents.json
app/src/main/cpp/asurfacerenderer/: ASurfaceRendererContext.cpp  ASurfaceRendererContext.h  CMakeLists.txt  GPU_CONVERTER_README.md  ahbimage.c  asurface_jni.cpp  blit_converter.cpp  blit_converter.h  drawable.c
app/src/main/cpp/evshim/: CMakeLists.txt  evshim.c
app/src/main/cpp/steambootstrap/: CMakeLists.txt
app/src/main/cpp/winlator/: VulkanRendererContext.cpp
app/src/main/java/app/gamenative/: MainActivity.kt  PluviaApp.kt  PrefManager.kt  SteamBootstrap.kt
app/src/main/java/app/gamenative/data/: Featured.kt  GOGGame.kt  LibraryItem.kt  LibraryPlayHistory.kt  ModInstall.kt  RecommendationRepository.kt  RecommendedGame.kt  ShooterModeConfig.kt  SteamCollection.kt  SteamCollectionRepository.kt  TouchGestureConfig.kt
app/src/main/java/app/gamenative/db/: PluviaDatabase.kt
app/src/main/java/app/gamenative/di/: DatabaseModule.kt
app/src/main/java/app/gamenative/gamefixes/: GameFixesRegistry.kt  STEAM_1293830.kt  STEAM_1962700.kt  STEAM_312520.kt
app/src/main/java/app/gamenative/mods/: BethesdaPlacementRecipeExpander.kt  BethesdaPluginManager.kt  FomodAutoSelector.kt  FomodInstaller.kt  ModArchiveExtractor.kt  ModArchiveInstallAssessor.kt  ModConflictAnalyzer.kt  ModContainerResolver.kt  ModDownloadRegistry.kt  ModMaterializer.kt  ModPathDetector.kt  ModPlacementPreset.kt  ModPlacementSources.kt  ModProfileManager.kt  ModTargetResolver.kt  NexusApiClient.kt  NexusCollectionManifest.kt  NexusCollectionPrioritySuggester.kt  NexusCollectionReusePolicy.kt  NexusDownloadLinkInbox.kt  NexusImportState.kt  NexusIntegrationStatus.kt  NexusModAutomationPolicy.kt  NexusModManager.kt  NexusPendingDownloadStore.kt  NexusUrlParser.kt
app/src/main/java/app/gamenative/service/: AchievementWatcher.kt  DownloadService.kt  NexusModImportService.kt  NotificationHelper.kt  SteamAutoCloud.kt  SteamService.kt
app/src/main/java/app/gamenative/steam/: CloudConfigStoreService.kt  SteamCollectionFilter.kt  SteamCollectionParser.kt
app/src/main/java/app/gamenative/ui/: PluviaMain.kt
app/src/main/java/app/gamenative/utils/: AssetUtils.kt  BestConfigService.kt  BrightnessManager.kt  ContainerFilesDownloader.kt  ContainerStorageManager.kt  ContainerUtils.kt  CoreDriverDownloader.kt  CustomGameScanner.kt  DXWrapperDownloader.kt  DeviceGameStatsCache.kt  DeviceGameStatsService.kt  DiagnosticsLog.kt  FileUtils.kt  GpuGameStatsCache.kt  GraphicsDriverDownloader.kt  HltbService.kt  ManifestComponentHelper.kt  ManifestInstaller.kt  ManifestRepository.kt  SteamUtils.kt  StorageUtils.kt  WinComponentDownloader.kt
app/src/main/java/app/gamenative/workshop/: WorkshopManager.kt  WorkshopSymlinker.kt
app/src/main/java/com/winlator/core/: WineUtils.java  (+2 more)
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_provider_paths.xml
gradle/: libs.versions.toml
(+157 files in other folders)
